<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity3">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_name3"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txt_name3" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:text="@string/init_et_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txt_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text|textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_phone3"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txt_phone3" />

        <EditText
            android:id="@+id/et_phone3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nick_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_nick3"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txt_nick3" />

        <EditText
            android:id="@+id/et_nick"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="@string/init_et_nick" />
    </LinearLayout>

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back" />

</LinearLayout>